[gd_scene load_steps=9 format=3 uid="uid://bj0nr7qdgjl8p"]

[ext_resource type="Script" uid="uid://rdsym13kotb6" path="res://Player/Zeri/zeri.gd" id="1_c2pxg"]
[ext_resource type="Texture2D" uid="uid://gy3gs5ims7bc" path="res://Textures/Player/zeri_sprite.PNG" id="2_c2pxg"]
[ext_resource type="PackedScene" uid="uid://deuow7u07d07s" path="res://Utility/hurt_box.tscn" id="3_684kp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 5.54694
height = 25.8553

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(13, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_btcbx"]
radius = 368.306

[sub_resource type="CircleShape2D" id="CircleShape2D_gwnis"]
radius = 43.0465

[sub_resource type="CircleShape2D" id="CircleShape2D_k53q1"]

[node name="Zeri" type="CharacterBody2D" groups=["player"]]
z_index = 2
motion_mode = 1
script = ExtResource("1_c2pxg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_c2pxg")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(1.05394, 0.818103)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="healthRegenTimer" type="Timer" parent="."]
autostart = true

[node name="HurtBox" parent="." instance=ExtResource("3_684kp")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_gwnis")

[node name="Attack" type="Node2D" parent="."]

[node name="SkillCooldownTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true

[node name="AutoCooldownTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="AutoAttackTimer" type="Timer" parent="Attack/AutoCooldownTimer"]
unique_name_in_owner = true
wait_time = 0.05

[node name="UltCooldownTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 60.0
one_shot = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_btcbx")

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_gwnis")

[node name="CollectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_k53q1")

[connection signal="timeout" from="healthRegenTimer" to="." method="_on_health_regen_timer_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/AutoCooldownTimer" to="." method="_on_auto_cooldown_timer_timeout"]
[connection signal="timeout" from="Attack/AutoCooldownTimer/AutoAttackTimer" to="." method="_on_auto_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
